<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_g">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/untitled" />

    <TextView
        android:id="@+id/signup_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="436dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="cursive"
        android:text="@string/signup_page"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="33sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/usernameg"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameg"
        android:layout_width="384dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="425dp"
        android:ems="10"
        android:hint="@string/username_g"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/fnameg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/signup_page" />

    <EditText
        android:id="@+id/fnameg"
        android:layout_width="386dp"
        android:layout_height="47dp"
        android:layout_marginStart="420dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/firstname_g"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lnameg"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameg" />

    <EditText
        android:id="@+id/lnameg"
        android:layout_width="387dp"
        android:layout_height="43dp"
        android:layout_marginStart="420dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/lastname_g"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailg"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnameg" />

    <EditText
        android:id="@+id/emailg"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="420dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/email_g"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordg"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnameg" />

    <EditText
        android:id="@+id/passwordg"
        android:layout_width="386dp"
        android:layout_height="45dp"
        android:layout_marginStart="420dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/password_g"
        android:inputType="textPassword"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailg" />

    <TextView
        android:id="@+id/genderg"
        android:layout_width="61dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="675dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="16dp"
        android:text="@string/gender_g"
        android:textColor="#F7050505"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityg"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:layout_marginStart="380dp"
        android:layout_marginTop="870dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="38dp"
        android:text="@string/city_g"
        android:textColor="#000000"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="270dp"
        android:layout_height="41dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="408dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <RadioButton
        android:id="@+id/radioButton_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="50dp"
        android:text="RadioButton"
        app:layout_constraintBottom_toTopOf="@+id/relationg"
        app:layout_constraintEnd_toStartOf="@+id/genderg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radioButton_male"
        app:layout_constraintTop_toBottomOf="@+id/passwordg"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="650dp"
        android:layout_marginBottom="48dp"
        android:text="RadioButton"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/passwordg"
        app:layout_constraintVertical_bias="0.498" />

    <EditText
        android:id="@+id/relationg"
        android:layout_width="382dp"
        android:layout_height="42dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/relation_g"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/phoneg"
        android:layout_width="386dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="980dp"
        android:layout_marginEnd="440dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/phone_g"
        android:inputType="phone"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonnext"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        android:textColor="#693674"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>