<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/untitled" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="137dp"
        android:layout_height="38dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="770dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="34dp"
        android:text="@string/VBT"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loging_page"
        android:layout_width="254dp"
        android:layout_height="61dp"
        android:layout_marginStart="450dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="400dp"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="715dp"
        android:text="@string/you_are"
        android:textColor="#1A4F68"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="137dp"
        android:layout_height="38dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="10dp"
        android:text="@string/gurdain"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonlogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="1020dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="130dp"
        android:text="@string/next"
        android:textColor="#693674"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


