<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="430dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoo" />

    <TextView
        android:id="@+id/loging_page"
        android:layout_width="254dp"
        android:layout_height="61dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="99dp"
        android:fontFamily="cursive"
        android:text="@string/login_page"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="33sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/emailg"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/emailg"
        android:layout_width="381dp"
        android:layout_height="61dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="425dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/loging_page" />

    <EditText
        android:id="@+id/passwordg"
        android:layout_width="381dp"
        android:layout_height="61dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="425dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:inputType="textVisiblePassword|textPassword"
        android:text="@string/password1"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/emailg" />


    <Button
        android:id="@+id/buttonlogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="420dp"
        android:layout_marginBottom="29dp"
        android:text="@string/login1"
        android:textColor="#693674"
        android:textColorLink="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonnew_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/passwordg" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="1082dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="9dp"
        android:text="@string/do_you_hava_account"
        android:textColor="#161414"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonnew_acc"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="599dp"
        android:autoText="false"
        android:text="@string/new_account"
        android:textColor="#0E3275"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        tools:layout_editor_absoluteY="512dp" />

</androidx.constraintlayout.widget.ConstraintLayout>